# autoclear-bot-rs

./: Cargo.toml  create.sql
.cargo/: config
src/: main.rs
