[package]
name = "autoclear-bot"
version = "0.2.0"
authors = ["jude-LafiteIII <jude@jellywx.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
serenity = "0.10"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "mysql", "bigdecimal"] }
regex = "1.4"
tokio = "1.5"
